# Kitty-API

./: .dockerignore  .env.sample  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  db-dev.sh  dev.docker-compose.yml  docker-compose.yml  send.sh
data/: cats.json  status_messages.json  textcats.json  users.json
data_item/: Cargo.toml
data_item/src/: lib.rs
data_item_derive/: Cargo.toml
data_item_derive/src/: lib.rs
docs/: DOCS.md
postgres/: create-tables.sql  docker-compose.yml
src/: accounts.rs  entities.rs  headers.rs  main.rs  misc.rs  preparation.rs  user.rs  users.rs  utils.rs
static/: style.css
static/meta/: site.webmanifest
templates/: index.html.tera
