# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "kitty-api"
version = "0.0.42"
authors = ["kittyandrew <kitty@maudrew.dev>"]
edition = "2018"

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket.git" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", features = ["tera_templates", "postgres_pool"] }
postgres = { version = "0.19" }
postgres-types = { version = "0.2", features = ["derive"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0"
blake3 = "0.3.7"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.7.3"
data_item = { path = "./data_item" }
data_item_derive = { path = "./data_item_derive" }
